--- a/src/app/landing-page-membership/landing-page-membership.component.scss
+++ b/src/app/landing-page-membership/landing-page-membership.component.scss
@@ -331,9 +331,10 @@ div#our-stories {
         background-image: none;
         h1 {
             color: rgba(67, 122, 190, 1);
-            padding-bottom: 20px;
+            padding-bottom: 0px;
             position: relative;
             color: #555;
+            margin-top: 20px;
         }
     }
 }
@@ -420,7 +421,7 @@ font-size: 20px;
 .engage-session {
     font-size: 18px;
     min-height: 85vh !important;
-    padding: 0 7.5%;
+    padding: 30px 7.5% 0px 7.5%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -593,7 +594,6 @@ font-size: 20px;
             top: 0;
             .each-carousel-item {
                 width: 25%;
-                height: 100%;
                 box-sizing: border-box;
                 position: Relative;
                 float: left;
@@ -1050,7 +1050,7 @@ drag-scroll {
     section.our-stories {
         .carousel-container {
             width: 80%;
-            height: 600px;
+            height: 440px;
         }
         .cases {
             height: 250px;
@@ -1082,7 +1082,6 @@ drag-scroll {
 
     #our-stories {
         .showcase-description {
-            width: 80%;
             margin: 0 auto !important;
             display: block;
             height: auto;
@@ -1093,6 +1092,7 @@ drag-scroll {
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            height: 100%;
         }
         .carousel-container {
             width: 100%;
@@ -1125,6 +1125,7 @@ drag-scroll {
         padding: 0;
         .swipe-area {
             padding: 0;
+            min-width: 100%;
         }
     }
     .job-description-session {
@@ -1269,6 +1270,11 @@ select:-webkit-autofill:focus {
 }
 
 @media (max-width: 600px) {
+
+    .brief-left p, .brief p {
+        font-size: 14px;
+    }
+
     .fa-chevron-left {
         margin-left: 5px;
         margin-right: 0;
@@ -1298,7 +1304,7 @@ select:-webkit-autofill:focus {
         width: 60%;
     }
     .col-width {
-        width: 35%;
+        width: 40%;
     }
     .desktop {
         display: none !important;
