fix(landing-page-membership): fixed icon colors in membership form

--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -296,7 +296,7 @@
       </div>
     </section>
     <div class='loading-landing-page' *ngIf="loading">
-      <div class="loading-animation loading-animation-gt"></div>
+      <div class="loading-animation loading-animation-membership"></div>
     </div>
   </div>
 </div>
