--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -208,7 +208,7 @@
     <div class="col-6 adapt-height">
       <h1 class="italic align-left white-header bottom-header">
         Somos mais de <strong>40.000 membros</strong> <br> ao redor de mais de <strong>120 países</strong>! <br> Junte-se ao nosso time! <br>
-        <button type="button" class="btn-primary" (click)="scrollTo(formMembershipRef)">
+        <button type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
           Inscreva-se
         </button>
       </h1>
