--- a/src/app/slider-membership-host/slider-membership-host.component.html
+++ b/src/app/slider-membership-host/slider-membership-host.component.html
@@ -1,5 +1,5 @@
 <div class='slider-membrasia-host' id='slider'>
-  <section class='membrasia animated faster fadeIn' [ngClass]='{"fadeIn": slider, "fadeContentOut": !slider}'>
+  <section class='membrasia animated faster' [ngClass]='{"fadeIn": slider , "fadeContentOut": !slider}'>
     <div class='bg-membrasia'></div>
     <div class='container'>
       <div class='row'>
@@ -15,7 +15,7 @@
       </div>
     </div>
   </section>
-  <section class='host animated faster' [ngClass]='{"fadeIn": !slider, "fadeContentOut": slider}'>
+  <section class='host animated faster' [ngClass]='{"fadeIn": !slider, "fadeContentOut": slider}' *ngIf="this.actualPage != 'membresia'">
     <div class='bg-host'></div>
     <div class='container'>
       <div class='row'>
