fix(memberhip): QA visual fixes

--- a/src/app/form-membership/form-membership.component.scss
+++ b/src/app/form-membership/form-membership.component.scss
@@ -1631,6 +1631,7 @@ label {
     background: #037ef3;
     font-family: 'Lato', sans-serif;
     color: #ffffff;
+    height: 100%;
 }
 
 .form-talentos-globais .form-control {
