feat(forms & landing pages): replaces outdated blog links with new ones

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -115,7 +115,7 @@
               <a href="http://business.aiesec.org.br/blog/" target="_blank">Empresas</a>
             </p>
             <p>
-              <a href="http://blog.aiesec.org.br/blog/estudantes/" target="_blank">Estudantes</a>
+              <a href="https://blog.aiesec.org.br" target="_blank">Estudantes</a>
             </p>
           </div>
           <div class="footer-social-networks col-md-3 col-sm-6">
