feat(general): replaces old blog links with new ones accross the entire application

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -80,7 +80,7 @@
                     Empresas
                   </li>
                 </a>
-                <a href="http://blog.aiesec.org.br/blog/estudantes/" target="_blank">
+                <a href="https://blog.aiesec.org.br/" target="_blank">
                   <li>
                     Estudantes
                   </li>
@@ -170,13 +170,13 @@
                       Empresas
                     </li>
                   </a>
-                  <a href="http://blog.aiesec.org.br/blog/estudantes/" target="_blank">
+                  <a href="https://blog.aiesec.org.br/" target="_blank">
                     <li>
                       Estudantes
                     </li>
                   </a>
-                </ul>             
-            </div>            
+                </ul>
+            </div>
           </div>
         </div>
       </div>
