fix(landing-page-membership): QA visual details fix

--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -48,6 +48,7 @@
   </section>
 
   <div #formMembershipRef></div>
+
   <!-- Form -->
   <app-form-membership id="header-talentos-globais"></app-form-membership>
 
@@ -206,7 +207,7 @@
 
   <section class="engage-session">
     <div class="col-6 adapt-height">
-      <h1 class="italic align-left white-header bottom-header">
+      <h1 class="italic align-left white-header">
         Somos mais de <strong>40.000 membros</strong> <br> ao redor de mais de <strong>120 países</strong>! <br> Junte-se ao nosso time! <br>
         <button type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
           Inscreva-se
