fix(landing-page-membership): UX feedbacks on membership pages

--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -206,15 +206,15 @@
   </div>
 
   <section class="engage-session">
-    <div class="col-6 adapt-height">
+    <div class="col-md-6 col-lg-6 col-sm-12 adapt-height">
       <h1 class="italic align-left white-header">
-        Somos mais de <strong>40.000 membros</strong> <br> ao redor de mais de <strong>120 países</strong>! <br> Junte-se ao nosso time! <br>
-        <button type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
-          Inscreva-se
-        </button>
+        Somos mais de <strong>40.000 membros</strong> ao redor de mais de <strong>120 países</strong>! <br> Junte-se ao nosso time!
       </h1>
+      <button type="button" class="btn btn-primary" (click)="scrollTo(formMembershipRef)">
+        Inscreva-se
+      </button>
     </div>
-    <div class="col-6"></div>
+    <div class="col-md-6 col-lg-6 d-none d-md-block"></div>
   </section>
 
 
