--- a/src/app/slider-membership-host/slider-membership-host.component.html
+++ b/src/app/slider-membership-host/slider-membership-host.component.html
@@ -1,7 +1,7 @@
 <div class='slider-membrasia-host' id='slider'>
   <section class='membrasia animated faster' [ngClass]='{"fadeIn": slider , "fadeContentOut": !slider}'>
     <div class='bg-membrasia'></div>
-    <div class='container'>
+    <div class='container' [ngClass]='{"align-menu": actualPage == "membresia"}'>
       <div class='row'>
         <div class="col-12">
           <p>
